# comscrub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
comscrub/: __init__.py  cli.py  core.py
data/: sample.c  sample.cpp  sample.m  sample.mm
tests/: test_comscrub.py
